main.css
body {
    width: 360px;

}

header {
    background-color: #acd373;
      height: 40px; 
    width: 360px;
}
.nav_bar {
background:#acd373;
    display: inline-block;
}
 .toggle {
display: inline;
    margin: 0;
     float: right;
       height: 40px;
    width: 40px;
}
.content {
background:#9abd67;
    height: 350px;
    background-image: url(images/silhuet.png);
        background-repeat: no-repeat;
    background-position: bottom;
    position: relative;
text-align: center;
    padding-top: 70px;

}
 span {
padding: 25px;
display: block;
}

.content h1 {
    font-family: 'Source Sans Pro';
    font-weight: 700;
    font-size: 20px;
    display: inline;
    color: white;
    padding-top: 80px;

}
.content img {
bottom: 4373px;
}
#mobile {
padding-left: 39%;
    padding-top: 40px;
    padding-bottom: 22px;
   
}

.who_are_we h2 {
text-align: left;
    background: url(images/manlogo.png) no-repeat;
    padding-left: 60px;
    padding-top: 10px;
    padding-bottom: 10px;
}
h2 {
color: black;
    font-size: 30px;
    font-family: 'Source Sans Pro';
    padding-left: 20px;
    object-position:left;
}
.secondpart{
background-color: #f7f7f7;
}
 p.main {
    padding: 30px;
    width: 298px;
    height: 60px;
    font-family: 'Source Sans Pro';
    color: #454545;
    font-size: 13px; 
    text-align: justify;
}


.content span {
    color: white;
    font-family: DroidSerif;
}

.section mobile{
        right: 441px;
        top: 433px;
        padding: 20px;
    text-align: center;    
    }
.container {
background-color: #f7f7f7;
}
p.one {
    border-style: solid;
    border-color: #acd373;
   border-width: 2px;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 5px;
    width: 88px;
    height: 30px;
    text-align: center;
    
}
.container video {
width: 360px;
    height: 261px;
    /* insert overlay and video icon */
}
.ourservices h3{
    font-family:'Source Sans Pro';
    text-align: center;
    text-transform: uppercase;
    /* Insert ellipse immage below h3 */
}
.graphicdesign h4 {
   text-align: left;
    position: relative;
    background: url(images/paintbrushlogo.png) no-repeat;
    padding-left: 65px;
    padding-top: 35px;
    padding-bottom: 10px;
    text-transform: uppercase;
    font: 700 17.78px 'Source Sans Pro';
    color: #acd373;
     /* need to format header and paragraph for this section, resize mobile logo in photoshop*/
}
.mobileapp h5{
     text-align:justify;
    position: relative;
    background: url(images/mobilelogo.png) no-repeat;
    padding-left: 35px;
    padding-top: 35px;
    padding-bottom: 10px;
    text-transform: uppercase;
    font: 700 17.78px 'Source Sans Pro';
    color: #acd373;
     /* need to format header and paragraph for this section, resize mobile logo in photoshop*/
    /* need to format header and paragraph for this section*/
}
p4 p5 p6 {
    font-family: 'Source Sans Pro';
        font-size: 16.51px;
    text-align: justify;
    position: relative;
}
.webdesign h6{
     text-align: left;
    background: url(images/monitiorlogo.png) no-repeat;
    padding-left: 60px;
    padding-top: 44px;
    padding-bottom: 10px;
    text-transform: uppercase;
    font: 700 17.78px 'Source Sans Pro';
    color: #acd373;
 /* need to format header and paragraph for this section*/
}

